# clearai-audit

./: .dockerignore  .gitignore  AUDIT_SYSTEM_LOGIC.md  CHECKLIST_EDITOR_GUIDE.md  CHECKLIST_INTEGRATION_SUMMARY.md  CHECKLIST_SYSTEM_SUMMARY.md  CHECKLIST_VALIDATOR_V2.md  DOCKER_SETUP.md  IMPLEMENTATION_ROADMAP.md  NEW_ARCHITECTURE_README.md  NZ auditing.csv  OUTPUT_BROWSER_README.md  OUTPUT_PATH_FIX.md  PATH_FIXES_SUMMARY.md  QUICK_REFERENCE.md  RAILWAY_ENV_TEMPLATE.txt  README.md  SIMPLIFIED_SYSTEM_SPEC.md  dev.sh  docker-compose.yml  install.sh  start.sh
backend/: Dockerfile  README.md  dev.sh  pyproject.toml  railway.toml  run_au_audit_10.py  sample_code_concession.md  start.sh  test_checklist.py
backend/checklists/: au_checklist.json  nz_checklist.json
backend/frontend/: 100_result.csv  index.html  sample.csv  sample_1.csv  sample_100.csv  sample_with_supplier.csv
backend/samplecode/: chat-tools copy.ts  chat-tools.ts  route.ts
backend/scripts/: rate_limit_test.py
backend/src/ai_classifier/: au_audit.py  checklist_models.py  checklist_validator.py  document_classifier.py  document_extractor.py  file_manager.py  main.py  nz_audit.py  nz_audit_summary.py
backend/src/ai_classifier/au/: classifier.py  schedule4_info.txt  tools.py
backend/src/ai_classifier/nz/: classifier.py  tools.py
backend/src/ai_classifier/routes/: au_audit.py  batch.py  checklist.py  nz_audit.py  nz_audit_summary.py  output.py
backend/src/ai_classifier/util/: batch_processor.py  sanitize.py
backend/tests/: test_nz_sanitize.py
checklists/: README.md  au_checklist.json
(+17 files in other folders)
